--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.1",
   "description": "Free Open Source Template Dashboard Admin Vue Tailwind CSS",
   "private": false,
+  "postinstall": "npm run build",
+  "start": "node server.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -13,12 +15,13 @@
     "type": "git",
     "url": "git+https://github.com/sahrullahh/windzo.git"
   },
-  "homepage": "https://windzo.vercel.app",
-  "author": "Mohammad Sahrullah",
+  "homepage": "",
+  "author": "Mirza Inshal Baig",
   "license": "MIT",
   "dependencies": {
     "apexcharts": "^3.34.0",
     "autoprefixer": "^10",
+    "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "flowbite": "^1.4.1",
@@ -26,6 +29,7 @@
     "perfect-scrollbar": "^1.5.5",
     "postcss": "^8",
     "smooth-scrollbar": "^8.7.4",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3",
     "v-tables-3": "^0.4.7",
     "vue": "^3.2.13",
@@ -40,6 +44,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "express": "^4.18.1",
+    "serve-static": "^1.15.0",
     "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
